# LegAI_articles_scripts

./: README.md  chain.py  main.py  pyproject.toml  uploader.py
.saved/administrative/: 0.json  1.json  10.json  11.json  12.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
.saved/administrative procedure/: 0.json  1.json  10.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  118.json  119.json  12.json  120.json  121.json  122.json  123.json  124.json  125.json  126.json  127.json  128.json  129.json  13.json  130.json  131.json  132.json  133.json  (+266 more)
.saved/civil p1/: 0.json  1.json  10.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  118.json  119.json  12.json  120.json  121.json  122.json  123.json  124.json  125.json  126.json  127.json  128.json  129.json  13.json  130.json  131.json  132.json  133.json  (+113 more)
.saved/civil p2/: 0.json  1.json  10.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  118.json  119.json  12.json  120.json  121.json  122.json  13.json  (+782 more)
articles_scripts/: Civil_articles.py  law_update.py  law_updt.py  uni_artic.py  universal_articles.py
interfaces/: metadata.py
law_parser/: codes.py  parser.py
(+8844 files in other folders)
